fix: initial fixes

--- a/garden-service/package.json
+++ b/garden-service/package.json
@@ -22,7 +22,7 @@
     "static"
   ],
   "dependencies": {
-    "@kubernetes/client-node": "0.8.2",
+    "@kubernetes/client-node": "git://github.com/garden-io/javascript#client-cert-auth",
     "@types/koa-static": "^4.0.1",
     "JSONStream": "^1.3.5",
     "analytics-node": "3.3.0",
